--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
-<!-- TODO: Remove or change this placeholder text -->
+    
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="search_title">输入英雄名称</string>
+    <string name="search_hint">输入英雄的名称</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
