--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="search_title">输入英雄名称</string>
     <string name="search_hint">输入英雄的名称</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_course_detail">CourseDetailActivity</string>
+    <string name="title_activity_order_detail">OrderDetailActivity</string>
+
+    <string name="cheese_ipsum">hahaha</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
